<resources>
    <string name="app_name">Snapshot Meter</string>
    <string name="title_section1">Übersicht Zähler</string>
    <string name="title_section2">Einstellungen</string>
    <string name="title_section3">Feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Schnelles Einlesen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera_snapshot">CameraSnapshot</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_utilities">Stadtwerke:</string>
    <string name="settings_last_name">Nachname:</string>
    <string name="settings_save">Sichern</string>
    <string name="feedback_send">Feedback absenden!</string>
    <string name="feedback_rating">Allgemeine Bewertung</string>
    <string name="feedback_life">Wie oft würden Sie ein fertiges Produkt dieser App-Idee benutzen?</string>
    <string name="overview_meter_add">Zähler hinzufügen</string>
    <string-array name="feedback_life_items">
        <item>nie</item>
        <item>jährlich</item>
        <item>monatlich</item>
        <item>täglich</item>
    </string-array>
    <string name="feedback_comment">Kommentar (optional)</string>
    <string name="feedback_desire">Würden Sie sich einen solchen Dienst für Ihren Energieversorger wünschen?</string>
    <string name="feedback_reading_success">Konnte Ihr Zählerstand erfolgreich eingelesen werden?</string>
    <string name="feedback_provider">Ihr momentaner Energieversorger (optional)</string>
    <string name="feedback_radio_yes">ja</string>
    <string name="feedback_radio_no">nein</string>
    <string name="meter_reading_number">Zählernummer:</string>
    <string name="meter_reading_date">Datum der Ablesung:</string>
    <string name="meter_reading_type">Zähler:</string>
    <string name="meter_reading_back">Zurück</string>
    <string name="meter_reading_send">Senden</string>
    <string name="meter_reading_unknown">nicht angegeben</string>
    <string name="meter_reading_value">Zählerstand:</string>
    <string name="meter_reading_unit_current">kWh</string>
    <string name="meter_add_name">Zähler-Name:</string>
    <string name="meter_add_type">Zähler-Typ:</string>
    <string name="meter_add_provider">Stadtwerke:</string>
    <string name="meter_add_name_hint">Bitte geben Sie einen Titel für Ihren Zähler an.</string>
    <string name="meter_add_lastname">Nachname:</string>
    <string name="meter_add_abort">Abbrechen</string>
    <string name="meter_add_add">Hinzufügen</string>
    <string name="meter_reading_normal_value">Zählerstand (ohne Nachkommastelle(n)):</string>
    <string name="meter_reading_normal_save">Speichern</string>
    <string name="meter_reading_normal_send">Speichern &amp; Senden</string>
    <string name="meter_reading_normal_abort">Abbrechen</string>
	<string name="meter_reading_delete">Löschen</string>
</resources>