<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
		
	    <!-- meter value -->
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="160dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="24dp"
	        android:text="@string/meter_reading_value" />
	    	
	    <TextView
	        android:id="@+id/meterValue"
	        style="@android:style/TextAppearance.Medium"
	        android:layout_width="125dp"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_below="@+id/textView2"
	        android:layout_marginTop="8dp"
	        android:textColor="@color/black"
	        android:text="@string/meter_reading_unknown" />
	    
	    <TextView
	        android:id="@+id/meterUnit"
	        style="@android:style/TextAppearance.Medium"
	        android:textColor="@color/black"
	        android:layout_width="35dp"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/meterValue"
	        android:layout_alignBottom="@+id/meterValue"
	        android:layout_toRightOf="@+id/meterValue"
	        android:text="@string/meter_reading_unit_current" />
	    
	    <!-- meter type -->
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignRight="@+id/textView2"
	        android:layout_below="@+id/meterValue"
	        android:layout_marginTop="17dp"
	        android:text="@string/meter_reading_type" />
	    
	    <TextView
	        android:id="@+id/meterDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignRight="@+id/textView2"
	        android:layout_below="@+id/textView1"
	        android:layout_marginTop="8dp"
	        android:textColor="@color/black"
	        android:text="@string/meter_reading_unknown" />
	    
	    <!-- meter number -->
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignRight="@+id/textView2"
	        android:layout_below="@+id/meterDescription"
	        android:layout_marginTop="17dp"
	        android:text="@string/meter_reading_number" />

	    <TextView
	        android:id="@+id/meterNumber"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignRight="@+id/textView2"
	        android:layout_below="@+id/textView3"
	        android:layout_marginTop="8dp"
	        android:textColor="@color/black"
	        android:text="@string/meter_reading_unknown" />
	    
	    <!-- meter reading date -->
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignRight="@+id/textView2"
	        android:layout_below="@+id/meterNumber"
	        android:layout_marginTop="17dp"
	        android:text="@string/meter_reading_date" />

	    <TextView
	        android:id="@+id/meterDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignRight="@+id/textView2"
	        android:layout_below="@+id/textView7"
	        android:layout_marginTop="8dp"
	        android:textColor="@color/black"
	        android:text="@string/meter_reading_unknown" />
	
	    <RelativeLayout 
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
			android:layout_below="@+id/meterDate"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="30dp"
			android:gravity="center"> 
		    
		    <Button
		        android:id="@+id/sendButton"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/button2"
		        android:text="@string/meter_reading_send"
		        android:onClick="sendValue" />
	
		    <Button
		        android:id="@+id/button2"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:text="@string/meter_reading_back"
		        android:onClick="abort" />

		    <Button
		        android:id="@+id/button3"
		        android:layout_width="210dp"
		        android:layout_height="35dp"
		        android:layout_below="@+id/button2"
		        android:layout_alignLeft="@+id/button2"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="14dp"
		        android:background="@color/red"
		        android:text="@string/meter_reading_delete"
		        android:onClick="deleteValue" />

		</RelativeLayout>

	</RelativeLayout>
</ScrollView>
