<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editText1"
	        android:layout_alignRight="@+id/editText1"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/meter_reading_normal_value"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:maxLength="20"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView1"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="3dp"
	        android:inputType="number"
	        android:ems="10" >
	    </EditText>

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editText1"
	        android:layout_centerHorizontal="true"
			android:layout_alignLeft="@+id/editText1"
	        android:layout_alignRight="@+id/editText1"
	        android:layout_marginTop="25dp"
	        android:onClick="saveValue"
	        android:text="@string/meter_reading_normal_save" />	    
	    
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/button1"
	        android:layout_centerHorizontal="true"
			android:layout_alignLeft="@+id/editText1"
	        android:layout_alignRight="@+id/editText1"
	        android:onClick="sendValue"
	        android:text="@string/meter_reading_normal_send" />
	
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/button2"
	        android:layout_centerHorizontal="true"
			android:layout_alignLeft="@+id/editText1"
	        android:layout_alignRight="@+id/editText1"
	        android:onClick="abort"
	        android:text="@string/meter_reading_normal_abort" />
	
	</RelativeLayout>
</ScrollView>
